--- a/The Rainbow Dinosaur/Assembly-CSharp.csproj
+++ b/The Rainbow Dinosaur/Assembly-CSharp.csproj
@@ -69,16 +69,18 @@
      <Compile Include="Assets\Scripts\Game\BulletManager.cs" />
      <Compile Include="Assets\Scripts\Game\Entity\Behavior\Behaviour.cs" />
      <Compile Include="Assets\Scripts\Game\Entity\Behavior\BhvAvoidBulletsForce.cs" />
+     <Compile Include="Assets\Scripts\Game\Entity\Behavior\BhvCustomize.cs" />
      <Compile Include="Assets\Scripts\Game\Entity\Behavior\BhvFireAtPlayer.cs" />
      <Compile Include="Assets\Scripts\Game\Entity\Behavior\BhvFollowPlayer.cs" />
      <Compile Include="Assets\Scripts\Game\Entity\Behavior\BhvFollowPlayerFly.cs" />
      <Compile Include="Assets\Scripts\Game\Entity\Behavior\BhvFollowPlayerFlyWave.cs" />
      <Compile Include="Assets\Scripts\Game\Entity\Behavior\BhvOnContact.cs" />
      <Compile Include="Assets\Scripts\Game\Entity\Behavior\BhvRunInCircle.cs" />
-     <Compile Include="Assets\Scripts\Game\Entity\Behavior\Condition\Condition.cs" />
-     <Compile Include="Assets\Scripts\Game\Entity\Behavior\Condition\HpChanged.cs" />
-     <Compile Include="Assets\Scripts\Game\Entity\Behavior\Condition\HpChanged_Threshold.cs" />
-     <Compile Include="Assets\Scripts\Game\Entity\Behavior\Condition\TimeElapsed.cs" />
+     <Compile Include="Assets\Scripts\Game\Entity\Behavior\Condition\Cdt.cs" />
+     <Compile Include="Assets\Scripts\Game\Entity\Behavior\Condition\CdtCdtHpChanged.cs" />
+     <Compile Include="Assets\Scripts\Game\Entity\Behavior\Condition\CdtHpChanged_Threshold.cs" />
+     <Compile Include="Assets\Scripts\Game\Entity\Behavior\Condition\CdtPathToPlayerAvailable.cs" />
+     <Compile Include="Assets\Scripts\Game\Entity\Behavior\Condition\CdtTimeElapsed.cs" />
      <Compile Include="Assets\Scripts\Game\Entity\EBullet.cs" />
      <Compile Include="Assets\Scripts\Game\Entity\EDoor.cs" />
      <Compile Include="Assets\Scripts\Game\Entity\Enemy\Enemy.cs" />
@@ -89,6 +91,7 @@
      <Compile Include="Assets\Scripts\Game\Entity\Enemy\EnemyFlyDancer.cs" />
      <Compile Include="Assets\Scripts\Game\Entity\Enemy\EnemyFlyWanderer.cs" />
      <Compile Include="Assets\Scripts\Game\Entity\Enemy\EnemyFoot.cs" />
+     <Compile Include="Assets\Scripts\Game\Entity\Enemy\Foot\PiggyZombie.cs" />
      <Compile Include="Assets\Scripts\Game\Entity\Entity.cs" />
      <Compile Include="Assets\Scripts\Game\Entity\EntityMove.cs" />
      <Compile Include="Assets\Scripts\Game\Entity\Items\EItem.cs" />
